# simulicore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  INSTALL.md  NOTICE  README  README.md  build.sh  config.sh
3rd/: CMakeLists.txt  cmake.mkl.in  mkl.lin.cmake  mkl.md  mkl.win.cmake
cla3p/: CMakeLists.txt
cla3p.mod/: CMakeLists.txt  README.md
cla3p.mod/documentation/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  cla3pdoxygen.css  examples.dox  modules.dox  quickstart.dox  sectionfixer.sh  tutorial.dox
cla3p.mod/examples/: CMakeLists.txt  ex00_property_create.cpp  ex01a_create_dense_vector.cpp  ex01a_dense_vector_create.cpp  ex01b_dense_vector_fill.cpp  ex01b_fill_dense_vector.cpp  ex01c_create_dense_vector_from_aux_data.cpp  ex01c_dense_vector_create_from_aux_data.cpp  ex01d_create_dense_random_vector.cpp  ex01d_dense_vector_create_random.cpp  ex01e_dense_vector_copy.cpp  ex01e_dense_vector_copy_move.cpp  ex01f_dense_vector_move.cpp  ex01f_dense_vector_shallow_copy.cpp  ex01g_dense_vector_block_operations.cpp  ex01h_dense_vector_algebra.cpp  ex01h_dense_vector_shallow_copy.cpp  ex01i_dense_vector_algebra_scale.cpp  ex01j_dense_vector_algebra_add.cpp  ex02a_create_dense_matrix.cpp  ex02a_dense_matrix_create.cpp  ex02b_dense_matrix_fill.cpp  ex02b_fill_dense_matrix.cpp  ex02c_create_dense_matrix_with_property.cpp  ex02c_dense_matrix_create_with_property.cpp  ex02d_create_dense_matrix_from_aux_data.cpp  ex02d_dense_matrix_create_from_aux_data.cpp  ex02e_create_dense_random_matrix.cpp  ex02e_dense_matrix_create_random.cpp  ex02f_dense_matrix_copy.cpp  ex02f_dense_matrix_copy_move.cpp  ex02g_dense_matrix_move.cpp  ex02g_dense_matrix_shallow_copy.cpp  ex02h_dense_matrix_block_operations.cpp  ex02h_dense_matrix_column_operations.cpp  ex02h_dense_matrix_shallow_copy.cpp  ex02i_dense_matrix_algebra_part1.cpp  ex02i_dense_matrix_algebra_part2.cpp  ex02i_dense_matrix_algebra_part3.cpp  ex02i_dense_matrix_algebra_part4.cpp  (+33 more)
cla3p.mod/examples/cmake_list_install/: CMakeLists.txt
cla3p.mod/examples/i32/: example_builder.sh
cla3p.mod/examples/i64/: example_builder.sh
cla3p.mod/examples/src/: CMakeLists.txt  ex00_property_create.cpp  ex01a_dense_vector_create.cpp  ex01b_dense_vector_fill.cpp  ex01c_dense_vector_create_from_aux_data.cpp  ex01d_dense_vector_create_random.cpp  ex01e_dense_vector_copy.cpp  ex01f_dense_vector_move.cpp  ex01g_dense_vector_block_operations.cpp  ex01h_dense_vector_shallow_copy.cpp  ex01i_dense_vector_algebra_scale.cpp  ex01j_dense_vector_algebra_add.cpp  ex01k_dense_vector_algebra_dot.cpp  ex02a_dense_matrix_create.cpp  ex02b_dense_matrix_fill.cpp  ex02c_dense_matrix_create_with_property.cpp  ex02d_dense_matrix_create_from_aux_data.cpp  ex02e_dense_matrix_create_random.cpp  ex02f_dense_matrix_copy.cpp  ex02g_dense_matrix_move.cpp  ex02h_dense_matrix_shallow_copy.cpp  ex02i_dense_matrix_block_operations.cpp  ex02j_dense_matrix_column_operations.cpp  ex02k_dense_matrix_algebra_scale.cpp  ex02l_dense_matrix_algebra_add.cpp  ex02m_dense_matrix_algebra_vmult.cpp  ex02n_dense_matrix_algebra_mmult.cpp  ex02o_dense_matrix_algebra_mtmult.cpp  ex03a_permutation_matrix_create.cpp  ex03b_permutation_matrix_fill.cpp  ex03c_permutation_matrix_create_identity.cpp  ex03d_permutation_matrix_create_random.cpp  ex03e_permutation_matrix_permute_vector.cpp  ex03f_permutation_matrix_permute_matrix.cpp  ex03g_permutation_matrix_permute_matrix_symmetric.cpp  ex03h_permutation_matrix_permute_permutation_matrix.cpp  ex04a_guard_const_vector.cpp  ex04b_guard_const_matrix.cpp  ex05a_solving_linear_systems_lu.cpp  ex05b_solving_linear_systems_ldlt.cpp  (+17 more)
cla3p.mod/images/: CMakeLists.txt
cla3p.mod/source/: CMakeLists.txt
cla3p.mod/source/cla3p/: CMakeLists.txt  algebra.hpp  dense.hpp  error.hpp  linsol.hpp  operations.hpp  perms.hpp  qr.hpp  sparse.hpp  support.hpp  svd.hpp  types.hpp  virtuals.hpp
cla3p.mod/syntax/cpp/: syntax.vim
cla3p/doxy/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  doxy.hpp  modules.dox
cla3p/examples/: CMakeLists.txt  ex02_create_matrix.cpp
cla3p/examples/build32/: build.sh
cla3p/examples/build64/: build.sh
cla3p/examples/cmake_list_install/: CMakeLists.txt
cla3p/src/: CMakeLists.txt  blas_proxy.cpp  blas_proxy.hpp  dense.hpp  dense2.hpp  dns.cpp  dns.hpp  dns_cdmatrix.cpp  dns_cdmatrix.hpp  dns_cdvector.hpp  dns_cfmatrix.cpp  dns_cfmatrix.hpp  dns_cfvector.cpp  dns_cfvector.hpp  dns_dmat.cpp  dns_dmat.hpp  dns_flmatrix.hpp  dns_flvector_source.hpp  dns_generic.cpp  dns_generic.hpp  dns_io.cpp  dns_io.hpp  dns_rdmatrix.cpp  dns_rdmatrix.hpp  dns_rdvector.cpp  dns_rdvector.hpp  dns_rfmatrix.cpp  dns_rfmatrix.hpp  dns_rfvector.hpp  dns_rimatrix.cpp  dns_rimatrix.hpp  dns_rivector.hpp  dns_xxmatrix.hpp  dns_xxvector_source.hpp  error.cpp  error.hpp  error_internal.cpp  error_internal.hpp  imalloc.cpp  imalloc.hpp  (+20 more)
cla3p/syntax/: .syntax_cpp.vim
clra.mod/: CMakeLists.txt  README.md
clra.mod/documentation/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  modules.dox  sectionfixer.sh  tutorial.dox
clra.mod/examples/: CMakeLists.txt  example_builder.sh  example_builder_i32.sh  example_builder_i64.sh  example_executor.sh  example_executor_i32.sh  example_executor_i64.sh
clra.mod/images/: CMakeLists.txt
cmake/: CMakeLists.txt  build_type.cmake  compiler.cmake  install.cmake  openmp.cmake  os.cmake
cmake/3rd/: CMakeLists.txt  armpl.mac.cmake  armpl.md  mkl.lin.cmake  mkl.md  mkl.win.cmake
cmpi/: CMakeLists.txt
cmpi/src/: CMakeLists.txt
example/: CMakeLists.txt  example.cpp  example.sh
licensing/: CMakeLists.txt
licensing/armpl/: CMakeLists.txt  license_agreement.txt  third_party_licenses.txt
licensing/intel_mkl/: CMakeLists.txt
sample/: CMakeLists.txt  sample.cpp  sample.sh
src/: CMakeLists.txt  example.cpp
src/cla3p/: CMakeLists.txt  test.cpp  test.hpp
src/lina/: CMakeLists.txt  test.cpp  test.hpp
tests/: CMakeLists.txt  bulk_dns_test.cpp  bulk_dns_test.hpp  cla3p_tests.cpp  cla3p_tests.sh  naive_matrix_ops.cpp  naive_matrix_ops.hpp  test_macros.hpp  types_test.cpp  types_test.hpp  utils_test.cpp  utils_test.hpp
(+2388 files in other folders)
