message("Setting up ${CMPI_LIB}...")

#-----------------------------------------------
# set module root
#-----------------------------------------------
set(CMPI_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")

#-----------------------------------------------
# sub-directory setup
#-----------------------------------------------
add_subdirectory(src)

#-----------------------------------------------
# end
#-----------------------------------------------
