#-----------------------------------------------
# source root setup
#-----------------------------------------------
set(SRC_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

#-----------------------------------------------
# sub-module setup
#-----------------------------------------------
set(LINA_LIB "lina-pre")
add_subdirectory(lina)

#-----------------------------------------------
# end
#-----------------------------------------------
