#-----------------------------------------------
# source root setup
#-----------------------------------------------
set(SRC_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

#-----------------------------------------------
# sub-module setup
#-----------------------------------------------
set(CLA3P_LIB "cla3p-pre")
add_subdirectory(cla3p)

#-----------------------------------------------
# end
#-----------------------------------------------
