set(CLA3P_DUCUMENTATION_INSTALL documentation/cla3p)

install(FILES Doxyfile DESTINATION ${CLA3P_DUCUMENTATION_INSTALL})
install(FILES DoxygenLayout.xml DESTINATION ${CLA3P_DUCUMENTATION_INSTALL})
install(FILES modules.dox DESTINATION ${CLA3P_DUCUMENTATION_INSTALL})
install(FILES examples.dox DESTINATION ${CLA3P_DUCUMENTATION_INSTALL})
install(FILES ${CLA3P_ROOT}/README.md DESTINATION ${CLA3P_DUCUMENTATION_INSTALL})
